--- a/source/VSTSExtensions/OctopusDashboardWidgets/Widgets/OctoProjectEnvironmentStatus/configuration.html
+++ b/source/VSTSExtensions/OctopusDashboardWidgets/Widgets/OctoProjectEnvironmentStatus/configuration.html
@@ -1,83 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
-<head>
-	<script src="vss/lib/VSS.SDK.min.js"></script>
-	<script type="text/javascript">
-				VSS.init({                        
-					explicitNotifyLoaded: true,
-					usePlatformStyles: true
-				});
-               
-				VSS.require(["TFS/Dashboards/WidgetHelpers", "VSS/Authentication/Services"], function (WidgetHelpers, VSS_Auth_Service) {
-					VSS.register("OctoProjectEnvironmentWidget.Configuration", function () {   
-						var $connectionDropdown = $("#octopus-connection");
-
-						return {
-							load: function (widgetSettings, widgetConfigurationContext) {
-								//var settings = JSON.parse(widgetSettings.customSettings.data);
-
-								console.debug('Entered load for new version');
-
-								VSS.getAccessToken().then(function(token) {
-									console.debug('Token retrieved:');
-									console.debug(token);
-									var webContext = VSS.getWebContext();
-									var baseUri = webContext.collection.uri + 'defaultcollection' + webContext.project.name;
-									var endpointUri = baseUri + '/_apis/distributedtask/serviceendpoints?type=OctopusEndpoint&api-version=3.0-preview.1';
-
-									var authToken = VSS_Auth_Service.authTokenManager.getAuthorizationHeader(token);
-									console.debug('authToken header retrieved:');
-									console.debug(authToken);
-
-									$.ajax({
-										type: "GET",
-										url: endpointUri,
-										headers: {'Authorization': authToken}
-									})
-									.done(function(data) {
-										console.debug('Endpoints retrieved');
-										console.debug(data);
-										$(data.value).each(function(i,e) {
-											console.debug(e);
-											$connectionDropdown.append($('<option value="'+ e.id + '">'+ e.name + '</option>'));
-										});
-										return WidgetHelpers.WidgetStatusHelper.Success();
-									});
-
-									/*
-									if (settings && settings.connectionId) {
-										$connectionDropdown.val(settings.connectionId);
-									}
-
-									$connectionDropdown.on("change", function () {
-										var customSettings = {
-											data: JSON.stringify({
-													connectionId: $connectionDropdown.val()
-												})
-										};
-										var eventName = WidgetHelpers.WidgetEvent.ConfigurationChange;
-										var eventArgs = WidgetHelpers.WidgetEvent.Args(customSettings);
-										widgetConfigurationContext.notify(eventName, eventArgs);
-
-									});
-									*/
-								});
-							},
-							onSave: function() {
-								var customSettings = {
-									data: JSON.stringify({
-											connectionId: $queryDropdown.val()
-										})
-								};
-								return WidgetHelpers.WidgetConfigurationSave.Valid(customSettings);
-							}
-						}
-					});
-					VSS.notifyLoadSucceeded();
-				});
-			</script>
-</head>
+<head></head>
 
 <body>
 	<div class="container">
@@ -85,7 +9,31 @@
 			<label class="label">Octopus Connection: </label>
 			<select id="octopus-connection" style="margin-top:10px"></select>
 		</fieldset>
+		<fieldset>
+			<label class="label">Octopus Project: </label>
+			<select id="octopus-project" style="margin-top:10px"></select>
+		</fieldset>
+		<fieldset>
+			<label class="label">Environment: </label>
+			<select id="octopus-environment" style="margin-top:10px"></select>
+		</fieldset>
 	</div>
+
+	<script src="vss/lib/VSS.SDK.min.js"></script>
+	<script src="js/configuration.js"></script>
+	<script type="text/javascript">
+		VSS.init({
+			explicitNotifyLoaded: true,
+			setupModuleLoader: true,
+			usePlatformStyles: true,
+			usePlatformScripts: true
+		});
+
+		VSS.ready(function () {
+			var statusWidgetConfig = new OctopusStatusWidgetConfiguration();
+			VSS.require(["TFS/Dashboards/WidgetHelpers", "VSS/Authentication/Services"], statusWidgetConfig.Configure);
+        });
+	</script>
 </body>
 
 </html>
