--- a/source/VSTSExtensions/OctopusDashboardWidgets/Widgets/OctoProjectEnvironmentStatus/octo-status.html
+++ b/source/VSTSExtensions/OctopusDashboardWidgets/Widgets/OctoProjectEnvironmentStatus/octo-status.html
@@ -3,24 +3,31 @@
 <head></head>
 <body>
     <style scoped>
-        .success {
-            background-color: #393;
+        #octo-info-statusIcon {
+            margin-top: 15px;
+            margin-left: 6px;
+            float: left;
         }
-        .success #octo-info-version:before {
-            content: "\e977";
+        #octo-info-status {
+            font-weight: bold;
+            float: left;
+            margin-top: 15px;
+            margin-left: 5px;
         }
-        .failure {
-            background-color: #DA0A00
-        }
-        .failure #octo-info-version:before {
-            content: "\e94f";
+        #octo-info-description {
+            font-size: 0.8em;
+            clear: both;
+            margin-top: 10px;
+            display: inline-block;
         }
     </style>
     <div id="octo-widget" class="widget">
-        <h2 id="octo-info-project"></h2>
+        <h2 id="octo-info-project" class="title"></h2>
         <h2 id="octo-info-environment"></h2>
         <div class="octo-info-container">
-            <div id="octo-info-version"></div>
+            <div id="octo-info-statusIcon" class="icon bowtie-icon"></div>
+            <div id="octo-info-status"></div>
+            <div id="octo-info-description"></div>
         </div>
     </div>
 
