--- a/source/VSTSExtensions/OctopusDashboardWidgets/Widgets/OctoProjectEnvironmentStatus/configuration.html
+++ b/source/VSTSExtensions/OctopusDashboardWidgets/Widgets/OctoProjectEnvironmentStatus/configuration.html
@@ -4,19 +4,25 @@
 <head></head>
 
 <body>
-	<div class="container">
-		<fieldset>
-			<label class="label">Octopus Connection: </label>
-			<select id="octopus-connection" style="margin-top:10px"></select>
-		</fieldset>
-		<fieldset>
-			<label class="label">Octopus Project: </label>
-			<select id="octopus-project" style="margin-top:10px"></select>
-		</fieldset>
-		<fieldset>
-			<label class="label">Environment: </label>
-			<select id="octopus-environment" style="margin-top:10px"></select>
-		</fieldset>
+	<div class="widget-configuration">
+		<div class="dropdown">
+			<label>Octopus Connection</label>
+			<div class="wrapper">
+				<select id="octopus-connection"></select>
+			</div>
+		</div>
+		<div class="dropdown">
+			<label>Octopus Project</label>
+			<div class="wrapper">
+				<select id="octopus-project"></select>
+			</div>
+		</div>
+		<div class="dropdown">
+			<label>Environment</label>
+			<div class="wrapper">
+				<select id="octopus-environment"></select>
+			</div>
+		</div>
 	</div>
 
 	<script src="vss/lib/VSS.SDK.min.js"></script>
@@ -32,7 +38,7 @@
 		VSS.ready(function () {
 			var statusWidgetConfig = new OctopusStatusWidgetConfiguration();
 			VSS.require(["TFS/Dashboards/WidgetHelpers", "VSS/Authentication/Services"], statusWidgetConfig.Configure);
-        });
+		});
 	</script>
 </body>
 
