--- a/source/widgets/ProjectStatus/configuration.html
+++ b/source/widgets/ProjectStatus/configuration.html
@@ -25,7 +25,7 @@
 		</div>
 	</div>
 
-	<script src="vss/lib/VSS.SDK.min.js"></script>
+	<script src="lib/VSS.SDK.min.js"></script>
 	<script src="js/configuration.js"></script>
 	<script type="text/javascript">
 		VSS.init({
