--- a/source/widgets/ProjectStatus/octo-status.html
+++ b/source/widgets/ProjectStatus/octo-status.html
@@ -63,7 +63,7 @@
         </a>
     </div>
 
-    <script src="vss/lib/VSS.SDK.min.js"></script>
+    <script src="lib/VSS.SDK.min.js"></script>
     <script src="js/octo-status.js"></script>
     <script src="js/moment.min.js"></script>
     <script type="text/javascript">
