--- a/source/widgets/ProjectStatus/configuration.html
+++ b/source/widgets/ProjectStatus/configuration.html
@@ -11,6 +11,13 @@
 				<select id="octopus-connection"></select>
 			</div>
 		</div>
+
+		<div class="dropdown">
+			<label>Space</label>
+			<div class="wrapper">
+				<select id="octopus-space"></select>
+			</div>
+		</div>
 		<div class="dropdown">
 			<label>Octopus Project</label>
 			<div class="wrapper">
