Cleaned up Azure DevOps widget w/ space support.

--- a/source/widgets/ProjectStatus/octo-status.html
+++ b/source/widgets/ProjectStatus/octo-status.html
@@ -51,7 +51,7 @@
     <div id="octo-widget" class="widget clickable">
         <a id="octo-info-link" title="View in Octopus" target="_parent">
             <h2 id="octo-info-project" class="title"></h2>
-            <h3 id="octo-info-environment"></h3>
+            <h3><span id="octo-info-space"></span><span id="octo-info-environment"></span></h3>
             <div class="octo-info-container">
                 <div id="octo-info-statusIcon" class="icon bowtie-icon"></div>
                 <div class="version-release-wrapper">
