--- a/source/widgets/ProjectStatus/configuration.html
+++ b/source/widgets/ProjectStatus/configuration.html
@@ -15,10 +15,15 @@
                     <select id="octopus-space"></select>
                 </div>
             </div>
-            <div class="dropdown">
+            <div>
                 <label>Octopus Project</label>
                 <div class="wrapper">
-                    <select id="octopus-project"></select>
+                    <input type="text" id="octopus-project-filter" placeholder="Filter project by name (optional)" />
+                </div>
+                <div class="dropdown">
+                    <div class="wrapper">
+                        <select id="octopus-project"></select>
+                    </div>
                 </div>
             </div>
             <div class="dropdown">
