Adding project group support (#184)
* Switching to use project groups for a more cohesive UX for both small and scale customers

* Fix for data source name

* Grr, adding missing slash

--- a/source/widgets/ProjectStatus/configuration.html
+++ b/source/widgets/ProjectStatus/configuration.html
@@ -15,15 +15,16 @@
                     <select id="octopus-space"></select>
                 </div>
             </div>
-            <div>
+            <div class="dropdown">
+                <label>Octopus Project Group</label>
+                <div class="wrapper">
+                    <select id="octopus-project-group"></select>
+                </div>
+            </div>
+            <div class="dropdown">
                 <label>Octopus Project</label>
                 <div class="wrapper">
-                    <input type="text" id="octopus-project-filter" placeholder="Filter project by name (optional)" />
-                </div>
-                <div class="dropdown">
-                    <div class="wrapper">
-                        <select id="octopus-project"></select>
-                    </div>
+                    <select id="octopus-project"></select>
                 </div>
             </div>
             <div class="dropdown">
